[tool.poetry]
name = "dribdat-book"
version = "0.1.0"
description = "A handbook of Data Skills"
authors = ["Oleg Lavrovsky <oleg@datalets.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
livemark = "^0"
ghp-import = "^2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
